# robosense_ac_calibration

./: CMakeLists.txt  LICENSE  README.md  README_CN.md  package.xml  plugin_description.xml
config/: AprilTag_41h12_104-116.yaml  AprilTag_41h12_65-77.yaml  calibration.yaml  calibration_result.yaml  default.rviz
include/: calib_core.h  camera_calib.h  common_function.h  lidar_calib.h  pca.h  rs_calibration.h
lib/apriltag/: .gitignore  CMakeLists.txt
lib/apriltag/example/: CMakeLists.txt
lib/apriltag/include/apriltag/: apriltag_pose.h  tag16h5.h  tag25h9.h  tag36h10.h  tag36h11.h  tagCircle21h7.h  tagCircle49h12.h  tagCustom48h12.h  tagStandard41h12.h  tagStandard52h13.h
lib/apriltag/include/apriltag/common/: doubles.h  doubles_floats_impl.h  floats.h  g2d.h  getopt.h  homography.h  image_u8.h  image_u8x3.h  image_u8x4.h  pjpeg.h  string_util.h  timeprofile.h  workerpool.h  zhash.h
lib/apriltag/src/: apriltag.c  apriltag_pose.c  apriltag_quad_thresh.c
lib/camera_model/: CMakeLists.txt
lib/camera_model/include/: camera_model.h  camera_model_factory.h  fisheye.h  pinhole.h
lib/camera_model/src/: camera_model_factory.cpp  fisheye.cpp  pinhole.cpp
lib/corner_detector/: CMakeLists.txt
lib/corner_detector/include/: board_info.h  corner_point_detector.h
lib/corner_detector/src/: board_info.cpp  corner_point_detector.cpp
src/: calib_core.cpp  camera_calib.cpp  common_function.cpp  lidar_calib.cpp  rs_calibration.cpp
ui/: calibration_widget.ui  ui_calibration_widget.h
